--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -111,13 +111,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L500">requestBuilder.ts:500</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L500">requestBuilder.ts:500</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Adds a condition expression to a input object.  A condition expression
-										defines under what conditions the item can be put/deleted.  Any existing
+									<p>Adds a condition expression to a input object.  A condition expression</p>
+									<p>defines under what conditions the item can be put/deleted.  Any existing
 									condition expression will be amended.</p>
 								</div>
 							</div>
@@ -160,7 +160,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L519">requestBuilder.ts:519</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L519">requestBuilder.ts:519</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -201,7 +201,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L515">requestBuilder.ts:515</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L515">requestBuilder.ts:515</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,13 +251,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L456">requestBuilder.ts:456</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L456">requestBuilder.ts:456</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Add a projection expression to an input object.  A projection expression
-										defines what attributes are returned in the result.  This can save
+									<p>Add a projection expression to an input object.  A projection expression</p>
+									<p>defines what attributes are returned in the result.  This can save
 									on bandwidth.</p>
 								</div>
 								<p>For documentation on attribute names see: <a href="http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html">http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html</a></p>
@@ -301,7 +301,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L294">requestBuilder.ts:294</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L294">requestBuilder.ts:294</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -336,7 +336,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L334">requestBuilder.ts:334</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L334">requestBuilder.ts:334</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -371,7 +371,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L269">requestBuilder.ts:269</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L269">requestBuilder.ts:269</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -406,7 +406,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -448,7 +448,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L164">requestBuilder.ts:164</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L164">requestBuilder.ts:164</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -489,7 +489,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L85">requestBuilder.ts:85</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L85">requestBuilder.ts:85</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -530,7 +530,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L101">requestBuilder.ts:101</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L101">requestBuilder.ts:101</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -562,7 +562,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L187">requestBuilder.ts:187</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L187">requestBuilder.ts:187</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -614,7 +614,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L27">requestBuilder.ts:27</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L27">requestBuilder.ts:27</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -646,7 +646,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L249">requestBuilder.ts:249</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L249">requestBuilder.ts:249</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -683,7 +683,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L423">requestBuilder.ts:423</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L423">requestBuilder.ts:423</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -714,7 +714,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L597">requestBuilder.ts:597</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L597">requestBuilder.ts:597</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -746,7 +746,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L575">requestBuilder.ts:575</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L575">requestBuilder.ts:575</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -780,7 +780,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L585">requestBuilder.ts:585</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L585">requestBuilder.ts:585</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -814,7 +814,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L562">requestBuilder.ts:562</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L562">requestBuilder.ts:562</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -843,7 +843,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L632">requestBuilder.ts:632</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L632">requestBuilder.ts:632</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -869,7 +869,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestBuilder.ts#L643">requestBuilder.ts:643</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestBuilder.ts#L643">requestBuilder.ts:643</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -912,13 +912,22 @@
 						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_validation_.html">"validation"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
