--- a/modules/_requestunwrapper_.html
+++ b/modules/_requestunwrapper_.html
@@ -91,7 +91,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/requestUnwrapper.ts#L7">requestUnwrapper.ts:7</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/requestUnwrapper.ts#L7">requestUnwrapper.ts:7</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -138,6 +138,9 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
+					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
@@ -145,7 +148,13 @@
 						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_validation_.html">"validation"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
