--- a/globals.html
+++ b/globals.html
@@ -77,9 +77,12 @@
 								<li class="tsd-kind-external-module"><a href="modules/_dynamodbreservedwords_.html" class="tsd-kind-icon">"dynamo<wbr>DbReserved<wbr>Words"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_index_.html" class="tsd-kind-icon">"index"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_requestbuilder_.html" class="tsd-kind-icon">"request<wbr>Builder"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_requestbuilder_test_.html" class="tsd-kind-icon">"request<wbr>Builder.test"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_requestunwrapper_.html" class="tsd-kind-icon">"request<wbr>Unwrapper"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_responseunwrapper_.html" class="tsd-kind-icon">"response<wbr>Unwrapper"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_responseunwrapper_test_.html" class="tsd-kind-icon">"response<wbr>Unwrapper.test"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_validation_.html" class="tsd-kind-icon">"validation"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_validation_test_.html" class="tsd-kind-icon">"validation.test"</a></li>
 							</ul>
 						</section>
 					</div>
@@ -114,13 +117,22 @@
 						<a href="modules/_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_validation_.html">"validation"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
