--- a/index.html
+++ b/index.html
@@ -375,13 +375,22 @@ const tableSchema = {
 						<a href="modules/_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_validation_.html">"validation"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
