--- a/interfaces/_condition_.condition.html
+++ b/interfaces/_condition_.condition.html
@@ -113,7 +113,7 @@
 					<div class="tsd-signature tsd-kind-icon">attribute<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/Condition.ts#L15">Condition.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/Condition.ts#L15">Condition.ts:15</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">operator<span class="tsd-signature-symbol">:</span> <a href="../modules/_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/Condition.ts#L21">Condition.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/Condition.ts#L21">Condition.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -151,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/Condition.ts#L28">Condition.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/Condition.ts#L28">Condition.ts:28</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -192,13 +192,22 @@
 						<a href="../modules/_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_validation_.html">"validation"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
