--- a/modules/_concurrenthelper_.html
+++ b/modules/_concurrenthelper_.html
@@ -103,7 +103,7 @@
 					<div class="tsd-signature tsd-kind-icon">Thunk<wbr>Promise<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/concurrentHelper.ts#L47">concurrentHelper.ts:47</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/concurrentHelper.ts#L47">concurrentHelper.ts:47</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/concurrentHelper.ts#L21">concurrentHelper.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/concurrentHelper.ts#L21">concurrentHelper.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -146,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -161,7 +161,7 @@
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Max<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;60000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -176,7 +176,7 @@
 					<div class="tsd-signature tsd-kind-icon">concurrent<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;20</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -198,7 +198,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/concurrentHelper.ts#L31">concurrentHelper.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/concurrentHelper.ts#L31">concurrentHelper.ts:31</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -232,7 +232,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/7e012f7/src/concurrentHelper.ts#L53">concurrentHelper.ts:53</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/73c3791/src/concurrentHelper.ts#L53">concurrentHelper.ts:53</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -287,13 +287,22 @@
 						<a href="_requestbuilder_.html">"request<wbr>Builder"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_requestbuilder_test_.html">"request<wbr>Builder.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_requestunwrapper_.html">"request<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="_responseunwrapper_.html">"response<wbr>Unwrapper"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="_responseunwrapper_test_.html">"response<wbr>Unwrapper.test"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="_validation_.html">"validation"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
 			</nav>
