--- a/modules/_validation_test_.html
+++ b/modules/_validation_test_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;index&quot; | Dynameh</title>
+	<title>&quot;validation.test&quot; | Dynameh</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_index_.html">&quot;index&quot;</a>
+					<a href="_validation_test_.html">&quot;validation.test&quot;</a>
 				</li>
 			</ul>
-			<h1>External module &quot;index&quot;</h1>
+			<h1>External module &quot;validation.test&quot;</h1>
 		</div>
 	</div>
 </header>
@@ -88,7 +88,7 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_dynamodbreservedwords_.html">"dynamo<wbr>DbReserved<wbr>Words"</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="_index_.html">"index"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -109,7 +109,7 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_validation_.html">"validation"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="_validation_test_.html">"validation.test"</a>
 					</li>
 				</ul>
