--- a/modules/_concurrenthelper_.html
+++ b/modules/_concurrenthelper_.html
@@ -73,7 +73,7 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Type aliases</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported"><a href="_concurrenthelper_.html#thunkpromise" class="tsd-kind-icon">Thunk<wbr>Promise</a></li>
+								<li class="tsd-kind-type-alias tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported"><a href="_concurrenthelper_.html#thunkpromise" class="tsd-kind-icon">Thunk<wbr>Promise</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -97,13 +97,13 @@
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Type aliases</h2>
-				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 					<a name="thunkpromise" class="tsd-anchor"></a>
 					<h3>Thunk<wbr>Promise</h3>
 					<div class="tsd-signature tsd-kind-icon">Thunk<wbr>Promise<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/concurrentHelper.ts#L47">concurrentHelper.ts:47</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/concurrentHelper.ts#L47">concurrentHelper.ts:47</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -127,11 +127,11 @@
 				<h2>Variables</h2>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="backofffactor" class="tsd-anchor"></a>
-					<h3>backoff<wbr>Factor</h3>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> backoff<wbr>Factor</h3>
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/concurrentHelper.ts#L21">concurrentHelper.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/concurrentHelper.ts#L21">concurrentHelper.ts:21</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -142,11 +142,11 @@
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="backoffinitial" class="tsd-anchor"></a>
-					<h3>backoff<wbr>Initial</h3>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> backoff<wbr>Initial</h3>
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/concurrentHelper.ts#L11">concurrentHelper.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -157,11 +157,11 @@
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="backoffmax" class="tsd-anchor"></a>
-					<h3>backoff<wbr>Max</h3>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> backoff<wbr>Max</h3>
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Max<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;60000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/concurrentHelper.ts#L16">concurrentHelper.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -172,11 +172,11 @@
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="concurrentfactor" class="tsd-anchor"></a>
-					<h3>concurrent<wbr>Factor</h3>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> concurrent<wbr>Factor</h3>
 					<div class="tsd-signature tsd-kind-icon">concurrent<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;20</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/concurrentHelper.ts#L6">concurrentHelper.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -198,7 +198,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/concurrentHelper.ts#L31">concurrentHelper.ts:31</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/concurrentHelper.ts#L31">concurrentHelper.ts:31</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -232,7 +232,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/concurrentHelper.ts#L53">concurrentHelper.ts:53</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/concurrentHelper.ts#L53">concurrentHelper.ts:53</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -308,7 +308,7 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-is-not-exported">
+					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module tsd-has-type-parameter tsd-is-not-exported">
 						<a href="_concurrenthelper_.html#thunkpromise" class="tsd-kind-icon">Thunk<wbr>Promise</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
