--- a/modules/_requestbuilder_.html
+++ b/modules/_requestbuilder_.html
@@ -111,13 +111,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L500">requestBuilder.ts:500</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L501">requestBuilder.ts:501</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Adds a condition expression to a input object.  A condition expression</p>
-									<p>defines under what conditions the item can be put/deleted.  Any existing
+									<p>Adds a condition expression to a input object.  A condition expression
+										defines under what conditions the item can be put/deleted.  Any existing
 									condition expression will be amended.</p>
 								</div>
 							</div>
@@ -160,7 +160,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L519">requestBuilder.ts:519</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L520">requestBuilder.ts:520</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-type-parameters-title">Type parameters</h4>
@@ -201,7 +201,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L515">requestBuilder.ts:515</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L516">requestBuilder.ts:516</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,13 +251,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L456">requestBuilder.ts:456</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L457">requestBuilder.ts:457</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Add a projection expression to an input object.  A projection expression</p>
-									<p>defines what attributes are returned in the result.  This can save
+									<p>Add a projection expression to an input object.  A projection expression
+										defines what attributes are returned in the result.  This can save
 									on bandwidth.</p>
 								</div>
 								<p>For documentation on attribute names see: <a href="http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html">http://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Expressions.Attributes.html</a></p>
@@ -301,7 +301,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L294">requestBuilder.ts:294</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L295">requestBuilder.ts:295</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -336,7 +336,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L334">requestBuilder.ts:334</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L335">requestBuilder.ts:335</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -371,7 +371,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L269">requestBuilder.ts:269</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L270">requestBuilder.ts:270</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -406,7 +406,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L372">requestBuilder.ts:372</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L373">requestBuilder.ts:373</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -448,7 +448,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L164">requestBuilder.ts:164</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L165">requestBuilder.ts:165</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -489,7 +489,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L85">requestBuilder.ts:85</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L86">requestBuilder.ts:86</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -530,7 +530,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L101">requestBuilder.ts:101</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L102">requestBuilder.ts:102</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -562,7 +562,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L187">requestBuilder.ts:187</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L188">requestBuilder.ts:188</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -614,12 +614,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L27">requestBuilder.ts:27</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L28">requestBuilder.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Build a serialized item that can be put in DynamoDB.</p>
+									<p>Build a serialized item that can be put in DynamoDB.  This syntax is also used for
+									expression and key values.</p>
 								</div>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -646,7 +647,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L249">requestBuilder.ts:249</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L250">requestBuilder.ts:250</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -683,7 +684,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L423">requestBuilder.ts:423</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L424">requestBuilder.ts:424</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -714,7 +715,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L597">requestBuilder.ts:597</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L598">requestBuilder.ts:598</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -746,7 +747,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L575">requestBuilder.ts:575</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L576">requestBuilder.ts:576</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -780,7 +781,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L585">requestBuilder.ts:585</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L586">requestBuilder.ts:586</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -814,7 +815,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L562">requestBuilder.ts:562</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L563">requestBuilder.ts:563</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -843,7 +844,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L632">requestBuilder.ts:632</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L633">requestBuilder.ts:633</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -869,7 +870,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/requestBuilder.ts#L643">requestBuilder.ts:643</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/requestBuilder.ts#L644">requestBuilder.ts:644</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
