--- a/modules/_batchhelper_.html
+++ b/modules/_batchhelper_.html
@@ -96,11 +96,11 @@
 				<h2>Variables</h2>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="backofffactor" class="tsd-anchor"></a>
-					<h3>backoff<wbr>Factor</h3>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> backoff<wbr>Factor</h3>
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Factor<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L29">batchHelper.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L29">batchHelper.ts:29</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -113,11 +113,11 @@
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="backoffinitial" class="tsd-anchor"></a>
-					<h3>backoff<wbr>Initial</h3>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> backoff<wbr>Initial</h3>
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Initial<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;1000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L17">batchHelper.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L17">batchHelper.ts:17</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -128,11 +128,11 @@
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="backoffmax" class="tsd-anchor"></a>
-					<h3>backoff<wbr>Max</h3>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> backoff<wbr>Max</h3>
 					<div class="tsd-signature tsd-kind-icon">backoff<wbr>Max<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;30000</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L22">batchHelper.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L22">batchHelper.ts:22</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -143,11 +143,11 @@
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="batchgetlimit" class="tsd-anchor"></a>
-					<h3>batch<wbr>Get<wbr>Limit</h3>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> batch<wbr>Get<wbr>Limit</h3>
 					<div class="tsd-signature tsd-kind-icon">batch<wbr>Get<wbr>Limit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">100</span><span class="tsd-signature-symbol"> =&nbsp;100</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L7">batchHelper.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L7">batchHelper.ts:7</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -158,11 +158,11 @@
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
 					<a name="batchwritelimit" class="tsd-anchor"></a>
-					<h3>batch<wbr>Write<wbr>Limit</h3>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> batch<wbr>Write<wbr>Limit</h3>
 					<div class="tsd-signature tsd-kind-icon">batch<wbr>Write<wbr>Limit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">25</span><span class="tsd-signature-symbol"> =&nbsp;25</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L12">batchHelper.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L12">batchHelper.ts:12</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -184,7 +184,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L59">batchHelper.ts:59</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L59">batchHelper.ts:59</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -217,7 +217,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L103">batchHelper.ts:103</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L103">batchHelper.ts:103</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -251,7 +251,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L36">batchHelper.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L36">batchHelper.ts:36</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -294,7 +294,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/batchHelper.ts#L132">batchHelper.ts:132</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/batchHelper.ts#L132">batchHelper.ts:132</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
