--- a/modules/_validation_.html
+++ b/modules/_validation_.html
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"IN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_exists"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_not_exists"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"attribute_type"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"contains"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"size"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L8">validation.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L8">validation.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L4">validation.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L4">validation.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +134,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Key<wbr>Pair<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">[</span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">, </span><a href="_validation_.html#dynamokey" class="tsd-signature-type">DynamoKey</a><span class="tsd-signature-symbol">]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L5">validation.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L5">validation.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">Dynamo<wbr>Query<wbr>Condition<wbr>Operator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&lt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"&gt;&#x3D;"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"BETWEEN"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"begins_with"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L6">validation.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L6">validation.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -153,31 +153,31 @@
 				<h2>Variables</h2>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 					<a name="attributetypes" class="tsd-anchor"></a>
-					<h3>attribute<wbr>Types</h3>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> attribute<wbr>Types</h3>
 					<div class="tsd-signature tsd-kind-icon">attribute<wbr>Types<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[&quot;S&quot;, &quot;SS&quot;, &quot;N&quot;, &quot;NS&quot;, &quot;B&quot;, &quot;BS&quot;, &quot;BOOL&quot;, &quot;NULL&quot;, &quot;L&quot;, &quot;M&quot;]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L24">validation.ts:24</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L24">validation.ts:24</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 					<a name="conditionoperators" class="tsd-anchor"></a>
-					<h3>condition<wbr>Operators</h3>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> condition<wbr>Operators</h3>
 					<div class="tsd-signature tsd-kind-icon">condition<wbr>Operators<span class="tsd-signature-symbol">:</span> <a href="_validation_.html#dynamoconditionoperator" class="tsd-signature-type">DynamoConditionOperator</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[&quot;&#x3D;&quot;, &quot;&lt;&gt;&quot;,  &quot;&lt;&quot;,  &quot;&lt;&#x3D;&quot;,  &quot;&gt;&quot;,  &quot;&gt;&#x3D;&quot;,  &quot;BETWEEN&quot;, &quot;IN&quot;,  &quot;attribute_exists&quot;,  &quot;attribute_not_exists&quot;,  &quot;attribute_type&quot;,  &quot;begins_with&quot;,  &quot;contains&quot;,  &quot;size&quot;]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L23">validation.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L23">validation.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
 					<a name="queryconditionoperators" class="tsd-anchor"></a>
-					<h3>query<wbr>Condition<wbr>Operators</h3>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> query<wbr>Condition<wbr>Operators</h3>
 					<div class="tsd-signature tsd-kind-icon">query<wbr>Condition<wbr>Operators<span class="tsd-signature-symbol">:</span> <a href="_validation_.html#dynamoqueryconditionoperator" class="tsd-signature-type">DynamoQueryConditionOperator</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> =&nbsp;[&quot;&#x3D;&quot;, &quot;&lt;&quot;, &quot;&lt;&#x3D;&quot;, &quot;&gt;&quot;, &quot;&gt;&#x3D;&quot;, &quot;BETWEEN&quot;, &quot;begins_with&quot;]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L7">validation.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L7">validation.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -194,7 +194,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L181">validation.ts:181</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L181">validation.ts:181</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -225,7 +225,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L224">validation.ts:224</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L224">validation.ts:224</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -256,7 +256,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L26">validation.ts:26</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L26">validation.ts:26</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -279,7 +279,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L139">validation.ts:139</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L139">validation.ts:139</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -313,7 +313,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L169">validation.ts:169</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L169">validation.ts:169</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -344,7 +344,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L56">validation.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L56">validation.ts:56</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -378,7 +378,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L106">validation.ts:106</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L106">validation.ts:106</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -409,7 +409,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L72">validation.ts:72</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L72">validation.ts:72</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -440,7 +440,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L89">validation.ts:89</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L89">validation.ts:89</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -471,7 +471,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L270">validation.ts:270</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L270">validation.ts:270</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -499,7 +499,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/345fbba/src/validation.ts#L242">validation.ts:242</a></li>
+									<li>Defined in <a href="https://github.com/Giftbit/dynameh/blob/b29cce0/src/validation.ts#L242">validation.ts:242</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
